[fix]: Fix routes
