# backend-service/src/routes/product.route.js
@@ -1,14 +1,14 @@
 import { Router } from "express";
 import { registerDefinition } from "swaggiffy";
-import { isLoggedIn, isAdmin } from "./../middlewares/auth.middleware"
-import productController from "./../controllers/product.controller"
+import { isLoggedIn, isAdmin } from "./../middlewares/auth.middleware.js"
+import productController from "./../controllers/product.controller.js"
 
 const productRouter = Router();
 
-productRouter.post("/create", { isLoggedIn, isAdmin }, productController.createProduct)
-productRouter.put("/update/:id", { isLoggedIn, isAdmin }, productController.updateProduct)
-productRouter.post("", productController.getProducts)
-productRouter.post("/:id", productController.getProductById)
+productRouter.post("/create", [isLoggedIn, isAdmin], productController.createProduct)
+productRouter.put("/update/:id", [ isLoggedIn, isAdmin ], productController.updateProduct)
+productRouter.get("/", productController.getProducts)
+productRouter.get("/:id", productController.getProductById)
 
 registerDefinition(productRouter, { tags: 'Product', mappedSchema: 'Product', basePath: '/api/v1/products' });
 
